force-app/main/default/objects/SmartIntake_Email_OTP__c/SmartIntake_Email_OTP__c.object-meta.xml
<CustomObject>
    <description>Stores short-lived email verification OTP attempts for SmartIntake flows. The plain OTP is never stored.</description>
    <label>SmartIntake Email OTP</label>
    <nameField>
        <displayFormat>OTP-{000000}</displayFormat>
        <label>OTP Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SmartIntake Email OTPs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>