force-app/main/default/objects/SmartIntake_Email_OTP__c/fields/Attempt_Count__c.field-meta.xml
<CustomField>
    <fullName>Attempt_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Attempt Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>