force-app/main/default/objects/SmartIntake_Email_OTP__c/fields/Intake_Session_Id__c.field-meta.xml
<CustomField>
    <fullName>Intake_Session_Id__c</fullName>
    <label>Intake Session Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>