force-app/main/default/objects/SmartIntake_Email_OTP__c/fields/Last_Sent_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Sent_At__c</fullName>
    <label>Last Sent At</label>
    <type>DateTime</type>
</CustomField>