force-app/main/default/objects/SmartIntake_Email_OTP__c/fields/Masked_Email__c.field-meta.xml
<CustomField>
    <fullName>Masked_Email__c</fullName>
    <label>Masked Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>