force-app/main/default/objects/SmartIntake_Email_OTP__c/fields/Normalized_Email__c.field-meta.xml
<CustomField>
    <fullName>Normalized_Email__c</fullName>
    <label>Normalized Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>