force-app/main/default/objects/SmartIntake_Email_OTP__c/fields/Otp_Hash__c.field-meta.xml
<CustomField>
    <fullName>Otp_Hash__c</fullName>
    <label>OTP Hash</label>
    <length>128</length>
    <type>Text</type>
</CustomField>