force-app/main/default/objects/SmartIntake_Email_OTP__c/fields/Salt__c.field-meta.xml
<CustomField>
    <fullName>Salt__c</fullName>
    <label>Salt</label>
    <length>64</length>
    <type>Text</type>
</CustomField>